--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@emotion/styled": "^11.3.0",
     "@material-ui/core": "^4.12.3",
     "@mui/material": "^5.0.6",
+    "axios": "^0.24.0",
     "node-fetch": "^3.0.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0"
