--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "axios": "^0.24.0",
     "node-fetch": "^3.0.0",
     "react": "^17.0.0",
-    "react-dom": "^17.0.0"
+    "react-dom": "^17.0.0",
+    "react-google-charts": "^3.0.15"
   },
   "devDependencies": {
     "@types/react": "^17.0.0",
